2009-03-16  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/gst-package.c: Converted a C++ comment to a C comment,
	to avoid a warning.

	* glom/main.cc (main): Fixed the build on Linux, which was broken
	since my last commit.

2009-03-13  Armin Burgmeier  <armin@openismus.com>

	* glom/dialog_existing_or_new.cc:
	* libglom/connectionpool_backends/postgres_self.cc:
	* libglom/glade_utils.h:
	* glom/main.cc:
	* glom/mode_design/print_layouts/print_layout_toolbar_button.cc:
	* glom/utility_widgets/layouttoolbar.cc:
	* glom/utility_widgets/layouttoolbarbutton.cc: Replaced
	g_win32_get_package_installation_subdirectory() by
	g_win32_get_package_installation_directory_of_module() since the
	former is deprecated. Bug #575021.

2009-03-13  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/fields/box_db_table_definition.
	field_has_null_values(): Do not warn about a false failure. 

2009-03-13  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc: connect(): Update the meta store for 
	just the data types and the table names, instead of everything. This is 
	slightly faster. This needs libgdamm from svn.
	More about the libgda meta store speed here:
	http://bugzilla.gnome.org/show_bug.cgi?id=575235

2009-03-13  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/fieldtypes.cc: Avoid an extra 
	update_meta_store() when exceptions are disabled.
	* glom/navigation/box_tables.cc: fill_table_row(): Avoid a crash when 
	the TableInfo is null.

2009-03-13  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool_backends/postgres.cc: Fix the build when 
	GLOM_CONNECTION_DEBUG is defined.

2009-03-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/Makefile.am: Do not install some headers that are for 
	API that I do not really want other people to use.

2009-03-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/adddel/eggcolumnchooser/: Copy a newer version from 