@@ -1,7 +1,7 @@
 #include "glomcalendar.h"
 
 #include <gtk/gtk.h>
-#if !GTK_CHECK_VERSION(2,16,0)
+#if !GTK_CHECK_VERSION(2,14,0)
 
 #include <gtkmm/private/widget_p.h>
 
